init of Tuple1Handler replaced with load